# mantis

./: .gitignore  Cargo.toml  Rocket.toml
.github/workflows/: ci.yml
infra/: docker-compose.yml
migrations/2025-11-13-123316-0000_create_users/: up.sql
src/: config.rs  main.rs
src/controllers/ui/: views.rs
src/models/forms/: login_form.rs  mod.rs  register_form.rs
templates/: index.html.tera  layout.html.tera  login.html.tera  register.html.tera
